--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,10 +38,10 @@
 
     <application
         android:allowBackup="false"
-        android:banner="@drawable/videos_by_google_banner"
+        android:banner="@drawable/tt"
         android:icon="@drawable/app_icon_quantum"
         android:label="@string/app_name"
-        android:logo="@drawable/videos_by_google_banner"
+        android:logo="@drawable/tt"
         android:theme="@style/Theme.Leanback"
         tools:ignore="GoogleAppIndexingWarning">
 
@@ -60,9 +60,9 @@
 
         <activity
             android:name="com.cw.tv_yt.ui.MainActivity"
-            android:icon="@drawable/videos_by_google_banner"
+            android:icon="@drawable/tt"
             android:label="@string/app_name"
-            android:logo="@drawable/videos_by_google_banner"
+            android:logo="@drawable/tt"
             android:screenOrientation="landscape"
             android:theme="@style/Theme.Leanback.Browse">
             <intent-filter>
