--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
     <application
         android:allowBackup="false"
         android:banner="@drawable/tt"
-        android:icon="@drawable/app_icon_quantum"
+        android:icon="@drawable/tt"
         android:label="@string/app_name"
         android:logo="@drawable/tt"
         android:theme="@style/Theme.Leanback"
@@ -72,7 +72,13 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.cw.tv_yt.mobile.MobileWelcomeActivity">
+        <!--<activity android:name="com.cw.tv_yt.mobile.MobileWelcomeActivity">-->
+        <activity android:name="com.cw.tv_yt.mobile.MobileWelcomeActivity"
+                  android:icon="@drawable/tt"
+                  android:label="@string/app_name"
+                  android:logo="@drawable/tt"
+                  android:screenOrientation="landscape"
+                  android:theme="@style/Theme.Leanback.Browse">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
