improve select links UI 2

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -148,6 +148,9 @@
             android:name="com.cw.tv_yt.data_yt.FetchVideoService_yt"
             android:exported="false" />
         <service
+            android:name="com.cw.tv_yt.data_yt.FetchCategoryService_yt"
+            android:exported="false" />
+        <service
             android:name="com.cw.tv_yt.recommendation.UpdateRecommendationsService"
             android:enabled="true" />
 
