--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
 
     <application
         android:allowBackup="false"
-        android:banner="@drawable/tt"
+        android:banner="@drawable/banner"
         android:icon="@drawable/tt"
         android:label="@string/app_name"
         android:logo="@drawable/tt"
