--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,7 +64,7 @@
             android:icon="@drawable/tt"
             android:label="@string/app_name"
             android:logo="@drawable/tt"
-            android:screenOrientation="landscape"
+            android:screenOrientation="unspecified"
             android:theme="@style/Theme.Leanback.Browse">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -78,7 +78,7 @@
                   android:icon="@drawable/tt"
                   android:label="@string/app_name"
                   android:logo="@drawable/tt"
-                  android:screenOrientation="landscape"
+                  android:screenOrientation="unspecified"
                   android:theme="@style/Theme.Leanback.Browse">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -105,11 +105,11 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-<!--        <activity-->
-<!--            android:name="com.cw.tv_yt.ui.PlaybackActivity"-->
-<!--            android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation|layoutDirection"-->
-<!--            android:launchMode="singleTask"-->
-<!--            android:resizeableActivity="true" />-->
+        <activity
+            android:name="com.cw.tv_yt.ui.PlaybackActivity"
+            android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation|layoutDirection"
+            android:launchMode="singleTask"
+            android:resizeableActivity="true" />
         <activity
             android:name="com.cw.tv_yt.ui.VerticalGridActivity"
             android:exported="true"
