--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,17 @@
         android:name="${applicationId}.ACCESS_VIDEO_DATA"
         android:protectionLevel="signature" />
 
+    <permission
+        android:name="${applicationId}.ACCESS_CATEGORY_DATA"
+        android:protectionLevel="signature" />
+
     <uses-permission android:name="${applicationId}.ACCESS_VIDEO_DATA" />
+    <uses-permission android:name="${applicationId}.ACCESS_CATEGORY_DATA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-feature
         android:name="android.hardware.microphone"
@@ -143,6 +149,12 @@
             <path-permission
                 android:pathPrefix="/search"
                 android:readPermission="android.permission.GLOBAL_SEARCH" />
+        </provider>
+        <provider
+            android:name=".data.CategoryProvider"
+            android:authorities="${packageName}"
+            android:exported="true"
+            android:permission="${applicationId}.ACCESS_CATEGORY_DATA">
         </provider>
 
         <receiver
